other-sample-app/deploymentconfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: sample-deployment
  namespace: gitops-test
spec:
   replicas: 2
   selector:
     deploymentconfig: recreate-example
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
         deploymentconfig: recreate-example
     spec:
       containers:
       - image: openshift/deployment-example:v1
         name: deployment-example
         ports:
         - containerPort: 8080
           protocol: TCP
   triggers:
   - type: ConfigChange
   - imageChangeParams:
       automatic: true
       containerNames:
       - deployment-example
       from:
         kind: ImageStreamTag
         name: recreate-example:latest
     type: ImageChange
