other-sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    deploymentconfig: recreate-example
