other-sample-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: recreate-example
spec:
  to:
    kind: Service
    name: recreate-example
